--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-LOGIN = 'lsqateam+555@gmail.com'
+LOGIN = 'lsqateam@gmail.com'
 PASSWORD = 'Abc123!!'
 BASE_URL = 'https://backend.powerfox.energy/api/3.0'
